--- a/index.html
+++ b/index.html
@@ -1,22 +1,421 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://use.fontawesome.com/56418e2813.js"></script>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap and Custom CSS files-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" href="css/design.css">
+    <link rel="stylesheet" href="css/docs.css">
+
 </head>
-</head>
+
+
 <body>
-    <nav>
-        
+<div class="holder">
+<div class="style">
+<!-- desktop price charts start -->
+    <table class="table .table-responsive style mOff hidden-xs-down">
+        <tbody>
+        <tr>
+            <td class="style pc-helpers language">
+                <div class="form-group">
+                    <select class="form-control language" id="sel1">
+                        <option>English</option>
+                        <option>Yoruba</option>
+                        <option>Hausa</option>
+                        <option>Igbo</option>
+                    </select>
+                </div>
+            </td>
+            <td class="style pc-helpers hidden-sm-down call">
+                 <span class="call"><i class="fa fa-phone" aria-hidden="true"></i> 0800-Pesnure</span>
+                <i class="fa fa-phone call-1" aria-hidden="true"></i>
+            </td>
+            <td class="style">
+              <H6 class="style mOff"> RSA FUNDS</H6>
+              <span>&#8358;2.3433 </span>
+            </td>
+            <td class="style">
+                <H6 class="style mOff"> RETIREE FUNDS</H6>
+                <span> &#8358;2.3433 </span>
+            </td>
+            <td class="style">
+                <H6 class="style mOff"> RSA ADMIN FEE </H6>
+                <span> &#8358;100 </span>
+            </td>
+            <td class="style reg">
+                <H6 class="style mOff"> REGISTERED RSA </H6>
+                <span> 500,000 </span>
+            </td>
+            <td class="style pc-helpers" style="border-right-style:hidden">
+                <span> <i class="fa fa-calculator calc" aria-hidden="true"></i> Calculator</span>
+            </td>
+           <td class="v-trends">
+               <button type="button" class="btn btn-outline-secondary v-trends">&#8594; Trends </button>
+           </td>
+            <td colspan="2" class="date" >
+                   <p id="date"> </p>
+            </td>
+        </tr>
+
+        </tbody>
+    </table>
+    <!-- desktop price charts end -->
+
+    <!-- mobile price charts start -->
+
+    <table class="table .table-responsive m-style mOff hidden-sm-up">
+        <tbody>
+        <tr>
+            <td class="m-style">
+                <H6 class="m-style mOff"> RSA FUNDS</H6>
+                <span>&#8358;2.3433 </span>
+            </td>
+            <td class="m-style">
+                <H6 class="m-style mOff"> RETIREE FUNDS</H6>
+                <span> &#8358;2.3433 </span>
+            </td>
+            <td class="m-style">
+                <H6 class="m-style mOff"> RSA ADMIN FEE </H6>
+                <span> &#8358;100 </span>
+            </td>
+            <td class="m-style m-pc-helpers" style="border-right-style:hidden">
+                <span> <i class="fa fa-calculator" aria-hidden="true"></i> Calculator</span>
+            </td>
+            <td class="m-v-trends">
+                <button type="button" class="btn btn-outline-secondary m-v-trends">&#8594; Trends </button>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+  <!-- mobile price charts end -->
+
+    <nav class="navbar navbar-toggleable-sm pOff style2" id="style2">
+      <div class="navStyle2">
+        <div class="collapse navbar-collapse style2">
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <form class="form-inline my-2 my-lg-0 size">
+                <input class="form-control mr-sm-2 mOff" id="search" type="text" placeholder="Search">
+            </form>
+            <ul class="navbar-nav mr-auto mOff style2">
+                <li class="nav-item style2 active" id="ps-list">
+                    <a class="nav-link style2" id="ps-link" href="#"> Products & Services </a>
+                </li>
+                <li class="nav-item style2" id="company-list">
+                    <a class="nav-link style2" id="company-link" href="#"> Our Company </a>
+                </li>
+                <li class="nav-item style2" id="invest-list">
+                    <a class="nav-link style2" id="invest-link" href="#"> Investment </a>
+                </li>
+                <li class="nav-item style2" id="news-list">
+                    <a class="nav-link style2" id="news-link" href="#">  News | Events </a>
+                </li>
+                <li class="nav-item style2" id="dload-list">
+                    <a class="nav-link style2"id="dload-link" href="#"> Downloads </a>
+                </li>
+                <li class="nav-item style2" id="contact-list">
+                    <a class="nav-link style2" id="contact-link" href="#"> Contact </a>
+                </li>
+            </ul>
+            <a class="navbar-brand mOff pOff" href="#"> <img class="logo" src="images/logo.png" alt=""> </a>
+        </div>
+
+          </div>
     </nav>
+    <!-- sub-navigation start -->
+    <div class="col-sm-9 sub-navigation" id="sub-nav1">
+        <ul class="inherit sub-navigation" id="ps-nav">
+            <li class="sub-navigation style2 ">Retirement savings account</li>
+            <li class="sub-navigation style2">Additional voluntary contribution</li>
+            <li class="sub-navigation style2">Cross-border benefits</li>
+            <li class="sub-navigation style2"> Managed Funds </li>
+            <li class="sub-navigation style2">NSITF</li>
+            <li class="sub-navigation style2"> Mobile services </li>
+        </ul>
+        </div>
+    <div class="col-sm-6 sub-navigation" id="sub-nav2">
+        <ul class="inherit sub-navigation" id="company-nav">
+            <li class="sub-navigation style2 "> Meet Pensure PFA </li>
+            <li class="sub-navigation style2"> Leadership </li>
+            <li class="sub-navigation style2"> Why Leadway? </li>
+            <li class="sub-navigation style2"> Financial reports </li>
+            <li class="sub-navigation style2"> Community service </li>
+        </ul>
+        </div>
+    <div class="col-sm-6 sub-navigation" id="sub-nav3">
+        <ul class="inherit sub-navigation" id="invest-nav">
+            <li class="sub-navigation style2 "> Financial markets </li>
+            <li class="sub-navigation style2"> Wealth planning </li>
+            <li class="sub-navigation style2"> Retirement planning </li>
+            <li class="sub-navigation style2"> Performance fund </li>
+            <li class="sub-navigation style2"> Podcasts </li>
+        </ul>
+    </div>
+    <div class="col-sm-3 sub-navigation" id="sub-nav4">
+        <ul class="inherit sub-navigation" id="news-nav">
+            <li class="sub-navigation style2 "> Careers </li>
+            <li class="sub-navigation style2"> Calendar </li>
+            <li class="sub-navigation style2"> Gallery </li>
+        </ul>
+        </div>
+    <div class="col-sm-9 sub-navigation" id="sub-nav5">
+        <ul class="inherit sub-navigation" id="dload-nav">
+            <li class="sub-navigation style2 ">Regulatory Information </li>
+            <li class="sub-navigation style2">Pension reform act</li>
+            <li class="sub-navigation style2">Code of Ethics </li>
+            <li class="sub-navigation style2"> Whistle blowing </li>
+            <li class="sub-navigation style2"> Retired and terminal benefits</li>
+            <li class="sub-navigation style2"> Corporate Governance </li>
+        </ul>
+        </div>
+    <div class="col-sm-4 sub-navigation" id="sub-nav6">
+        <ul class="inherit sub-navigation" id="contact-nav">
+            <li class="sub-navigation style2 ">FAQ's</li>
+            <li class="sub-navigation style2">Branch network</li>
+            <li class="sub-navigation style2"> Customer care </li>
+        </ul>
+    </div>
+    <!-- sub-navigation end -->
+  </div>
+
+<!-- carousel start -->
+        <div id="slider" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active">
+                    <img class="d-block img-fluid" src="images/purpose.jpg" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block img-fluid" src="images/grad.jpg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block img-fluid" src="images/budget.jpg" alt="Third slide">
+                </div>
+            </div>
+        </div>
+<!-- carousel end -->
+<!-- main navigation start -->
+<nav class="navbar navbar-toggleable-sm hidden-xs-down pOff style3" id="style3">
+    <div class="navStyle3">
+        <div class="collapse navbar-collapse style3">
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <ul class="navbar-nav mr-auto mOff style3">
+                <li class="nav-item style3 active" id="p-s-list-env">
+                    <a class="nav-link style3" href="#"> <span id="p-s-list">Products & Services</span>  </a>
+                    <ul id="p-s-list-long">
+                        <li class="nav-item style3-active">
+                            <a class="nav-link style3-active"  href="#"> Retirement savings account  </a>
+                        </li>
+                        <li class="nav-item style3-active">
+                            <a class="nav-link style3-active" href="#"> Additional voluntary contribution </a>
+                        </li>
+                        <li class="nav-item style3-active">
+                            <a class="nav-link style3-active"  href="#"> Cross-border service </a>
+                        </li>
+                        <li class="nav-item style3-active">
+                            <a class="nav-link style3-active"  href="#"> NSTIF </a>
+                        </li>
+                        <li class="nav-item style3-active">
+                            <a class="nav-link style3-active"  href="#"> Mobile services </a>
+                        </li>
+                    </ul>
+                </li>
+
+                <li class="nav-item style3 active">
+                    <a class="nav-link style3" href="#"> Benefits </a>
+                </li>
+                <li class="nav-item style3" >
+                    <a class="nav-link style3" href="#"> Investments </a>
+                </li>
+                <li class="nav-item style3" >
+                    <a class="nav-link style3" href="#">  Login </a>
+                </li>
+
+                   <a class="navbar-brand mOff pOf logo" href="#"> <img src="images/logo-alt.png" alt=""> </a>
+
+                <li class="nav-item style3" >
+                    <a class="nav-link style3" href="#"> Our Company </a>
+                </li>
+                <li class="nav-item style3">
+                    <a class="nav-link style3"  href="#">  Social </a>
+                </li>
+                <li class="nav-item style3">
+                    <a class="nav-link style3" href="#"> News | Events </a>
+                </li>
+                <li class="nav-item style3">
+                    <a class="nav-link style3" href="#"> Contact </a>
+                </li>
+            </ul>
+
+        </div>
+
+    </div>
+</nav>
+<!-- main navigation end -->
+<!-- quick start begin-->
+
+    <ul class="style4 pOff hidden-xs-down">
+
+    <li class="nav-item m-nav style4">
+        <a class="nav-link style3" href="#">
+            <figure>
+                <img src="images/search.png" class="style4" alt="">
+                <figcaption> Search </figcaption>
+            </figure>
+        </a>
+    </li>
+    <li class="nav-item m-nav style4">
+        <a class="nav-link style3" href="#">
+            <figure>
+                <img src="images/t-form.png" class="style4" alt="">
+                <figcaption> Expression of interest </figcaption>
+            </figure>
+        </a>
+    </li>
+    <li class="nav-item m-nav style4">
+        <a class="nav-link style3" href="#">
+            <figure>
+                <img src="images/c-login.png" class="style4" alt="">
+                <figcaption> Customer login </figcaption>
+            </figure>
+        </a>
+    </li>
+    <li class="nav-item m-nav style4">
+        <a class="nav-link style3" href="#">
+            <figure>
+                <img src="images/e-login.png" class="style4" alt="">
+                <figcaption> Employer login </figcaption>
+            </figure>
+        </a>
+    </li>
+        <li class="nav-item m-nav style4">
+            <a class="nav-link style3" href="#">
+                <figure>
+                    <img src="images/b-network.png" class="style4" alt="">
+                    <figcaption> Downloads </figcaption>
+                </figure>
+
+            </a>
+        </li>
+    </ul>
+<!-- end of quick start -->
+</div>
+<!-- start of section1 -->
+<div class="container" id="wrapper">
+    <div class="row row-margin">
+        <div class="col-12 col-sm-6 pOff">
+            <h6 align="center" class="intro-box hidden-sm-up"> Leadway Pensure PFA is...</h6>
+            <img class="connect" src="images/connect.png" alt="">
+        </div>
+        <!-- intro-box start -->
+        <div class="col-12 col-sm-6 intro-box">
+            <div class="row">
+                <div class="col-12">
+                    <h6 align="center" class="intro-box hidden-xs-down"> Leadway Pensure PFA is...</h6>
+                    <p align="center" class="intro-box"> ...totally committed to ensuring we provide that value. We pride
+                        ourselves on the fact that we will generate enviable investment returns,
+                        making sure that your retirement nest egg grows within the boundaries
+                        of our economy. Our commitment to value means that we are also
+                        committed to providing excellent service to you at all times </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12" align="center">
+                    <button type="button" class="btn btn-outline-secondary b-style"> About us </button>
+                </div>
+            </div>
+
+        </div>
+        <!-- intro-box end -->
+    </div>
+    <div class="row message-box-container">
+        <div class="col-12 col-sm-4 message-box">
+            <p class="message-box">
+                Over the last decade, we’ve
+                spread to over 25 branches
+                nationwide servicing over
+                500,000 RSA accounts.
+            </p>
+        </div>
+        <div class="col-12 solutions hidden-xs-down">
+            <div class="center col-sm-8 offset-sm-4 ">
+                <div class="row">
+                    <div class="col-12">
+                        <h6 align="center" class="solutions"> Some frequently asked questions </h6>
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-sm-4" align="center">
+                        <p class="solutions">  How to open my RSA account? </p>
+                        <button type="button" class="btn btn-outline-secondary b-style FAQ"> Read more </button>
+                    </div>
+                    <div class="col-12 col-sm-4" align="center">
+                        <p align="center" class="solutions"> When I start claiming benefits?  </p>
+                        <button type="button" class="btn btn-outline-secondary b-style FAQ"> Read more </button>
+                    </div>
+                    <div class="col-12 col-sm-4" align="center">
+                        <p align="center" class="solutions">  How to retrieve lost pin ? </p>
+                        <button type="button" class="btn btn-outline-secondary b-style FAQ"> Read more </button>
+                    </div>
+                </div>
+            </div>
+
+    </div>
+        <div class="col-12 solutions1 hidden-sm-up">
+            <div class="center col-sm-8 offset-sm-4 ">
+                <div class="row">
+                    <div class="col-12">
+                        <h6 align="center"> Some frequently asked questions </h6>
+
+                    </div>
+                </div>
+                <div class="row FAQ">
+                    <div class="col-12 col-sm-4" align="center">
+                        <figure>
+                            <img src="images/interview.png" class="" alt="">
+                            <figcaption class="FAQ"> How to open an RSA account? </figcaption>
+                        </figure>
+                        <button type="button" class="btn btn-outline-secondary b-style m-FAQ"> Read more </button>
+                    </div>
+                    <div class="col-12 col-sm-4" align="center">
+                        <figure>
+                            <img src="images/coins.png" class="" alt="">
+                            <figcaption class="FAQ"> When can I start claiming benefits? </figcaption>
+                        </figure>
+                        <button type="button" class="btn btn-outline-secondary b-style m-FAQ"> Read more </button>
+                    </div>
+                    <div class="col-12 col-sm-4" align="center">
+                        <figure>
+                            <img src="images/key.png" class="" alt="">
+                            <figcaption class="FAQ"> Retrieving my lost pin? </figcaption>
+                        </figure>
+                        <button type="button" class="btn btn-outline-secondary b-style m-FAQ"> Read more </button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+</div>
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <script src="js/index.js"> </script>
+    <script> $('.carousel').carousel() </script>
+    <script>
+    var date = new Date();
+    var today = date.toDateString()
+    document.getElementById("date").innerHTML = today ;
+    </script>
 </body>
 </html>
