--- a/index.html
+++ b/index.html
@@ -17,14 +17,11 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-<<<<<<< HEAD
     <link href="https://cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
     <style type="text/css">
 	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
     </style>
-=======
     <!-- Hotjar Tracking Code for lppfa.inspireleadership.biz -->
->>>>>>> 703a4156ceab2eb627b58ba3ec2ed743477f5f31
     <script>
         (function(h,o,t,j,a,r){
             h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
@@ -34,15 +31,12 @@
             r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
             a.appendChild(r);
         })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
-<<<<<<< HEAD
 </script>
     <script type='text/javascript' src='https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
     <script type='text/javascript'>
    (function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);
    </script>
-=======
     </script>
->>>>>>> 703a4156ceab2eb627b58ba3ec2ed743477f5f31
 </head>
 <body style="overflow-x: hidden">
     <!-- Mobile navigation -->
@@ -564,7 +558,7 @@
         </div>
     </div>
     <!-- Footer of page -->
-    <footer class="container-fluid">
+        <footer class="container-fluid">
         <hr class="hr-red">
         <div class="row">
             <div class="col-12 col-md-6 align-self-center newsHeader">
@@ -576,14 +570,14 @@
                         <img class="d-flex align-self-center mr-3" src="images/vas.png" alt="" height=50 width=50>
                         <div class="media-body">
                             <h5 class="mt-0">Leadway unveils value added services</h5>
-                            <p>Following our master-plan to become a consumer oriented brand we have implemented... <a href="#">Read more</a></p>
+                            <p>Following our masterplan to becoma a consumer oriented brand we have implemented... <a href="#">Read more</a></p>
                         </div>
                     </li>
                     <li class="media">
                         <img class="d-flex align-self-center mr-3" src="images/vas.png" alt="" height=50 width=50>
                         <div class="media-body">
-                            <h5 class="mt-0">Leadway unveils Mobile App</h5>
-                            <p>Following our master-plan to become a consumer oriented brand we have implemented... <a href="#">Read more</a></p>
+                            <h5 class="mt-0">Leadway unveils value added services</h5>
+                            <p>Following our masterplan to becoma a consumer oriented brand we have implemented... <a href="#">Read more</a></p>
                         </div>
                     </li>
                 </ul>
@@ -594,7 +588,6 @@
             <a class="col-12 col-md-6 btn-red" data-toggle="collapse" data-target="#feed" aria-expanded="false" aria-controls="feed">Give us your Feedback</a>
         </div>
         <div class="row justify-content-around" style="margin-bottom: 10px">
-<<<<<<< HEAD
             <div class="col-12 col-md-4 collapse" id="sign">
 
 <!-- Begin MailChimp Signup Form -->
@@ -630,30 +623,13 @@
             <div class="col-12 col-md-4 collapse" id="feed">
              <h2 class="text-center" style="font-size:1.4em"> We'd love to hear from you </h2>
                 <form>
-                    <div class="form-group">
-                        <input class="form-control form-control-sm chimp" type="text" placeholder="E-mail Address" required>
+                    <div class="form-group text-center">
+                        <input class="form-control form-control-sm chimp text-center" type="text" placeholder="E-mail Address" required>
                     </div>
                     <div class="form-group">
-                        <textarea class="form-control form-control-sm chimp" rows="3" cols="inherit" placeholder="Please write here" required></textarea>
-=======
-            <div class="col-10 col-sm-8 col-md-4 col-lg-3 collapse" id="sign">
-                <form>
-                    <div class="form-group">
-                        <input class="form-control" type="text" placeholder="E-mail" required>
+                        <textarea class="form-control form-control-sm chimp text-center" rows="3" cols="inherit" placeholder="Please write here" required></textarea>
                     </div>
-                    <div class="text-center"><button type="button" class="btn btn-outline-red">Sign Up</button></div>
-                </form>
-            </div>
-            <div class="col-10 col-sm-8 col-md-4 col-lg-3 collapse" id="feed">
-                <form>
-                    <div class="form-group">
-                        <input class="form-control" type="text" placeholder="E-mail" required>
-                    </div>
-                    <div class="form-group">
-                        <textarea class="form-control" rows="3" cols="inherit" placeholder="Please write here" required></textarea>
->>>>>>> 703a4156ceab2eb627b58ba3ec2ed743477f5f31
-                    </div>
-                    <div class="text-center"><button type="button" class="btn btn-outline-red">Post Feedback</button></div>
+                    <div class="text-center"><input type="submit" class="btn btn-outline-red btn-sm" value="Post feedback"></div>
                 </form>
             </div>
         </div>
@@ -662,10 +638,10 @@
                 <h6>Regulatory Requirements</h6>
                 <nav class="nav flex-column">
                     <a class="nav-link active" href="#">Regulatory Information</a>
-                    <a class="nav-link" href="document/LegalPensionReformAct2014.pdf" target="_blank">Pension Reform Act</a>
-                    <a class="nav-link" href="document/WhistleBlowingGuidelines.pdf" target="_blank"> Whistle Blowing</a>
-                    <a class="nav-link" href="document/Code_of_Ethics_and_Business_Practices_for_Licensed_Operators.pdf" target="_blank">Code of Ethics and Conduct</a>
-                    <a class="nav-link" href="document/ApprovedRegulationonAdministrationofRetirementandTerminalBenefits.pdf" target="_blank">Retired and Terminal Benefits</a>
+                    <a class="nav-link" href="#">Pension Reform Act</a>
+                    <a class="nav-link" href="#"> Whistle Blowing</a>
+                    <a class="nav-link" href="#">Code of Ethics and Conduct</a>
+                    <a class="nav-link" href="#">Retired and Terminal Benefits</a>
                 </nav>
             </div>
             <div class="col-12 col-md-6 col-lg-3">
@@ -673,9 +649,9 @@
                 <nav class="nav flex-column">
                     <a class="nav-link active" href="#">Blog</a>
                     <a class="nav-link" href="#">Enroll Now</a>
-                    <a class="nav-link" href="benefits.html">Benefits</a>
-                    <a class="nav-link" href="investment.html">Our Philosophy</a>
-                    <a class="nav-link" href="contact.html">Branch Network</a>
+                    <a class="nav-link" href="#">Benefits</a>
+                    <a class="nav-link" href="#">Our Philosophy</a>
+                    <a class="nav-link" href="#">Branch Network</a>
                 </nav>
             </div>
             <div class="col-12 col-md-6 col-lg-3 app">
@@ -719,19 +695,19 @@
                         <a class="nav-link" href="#">Site Map</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="privacy.html">Privacy Policy</a>
+                        <a class="nav-link" href="#">Privacy Policy</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Legal</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="terms.html">Terms & Conditions</a>
+                        <a class="nav-link" href="#">Terms & Conditions</a>
                     </li>
                 </ul>
             </div>
         </div>
         <div class="row signature">
-            <div class="col-12 col-md-4 align-self-center text-center "><img src="images/pencom.png" height="90" width="90" alt="Pencom Logo"/></div>
+            <div class="col-12 col-md-4 align-self-center text-center "><img src="images/pencom.png" height="90" width="90" alt=""/></div>
             <div class="col-12 col-md-4 align-self-center text-center">&copy; Leadway Pensure 2017</div>
             <div class="col-12 col-md-4 align-self-center text-center">Web Design & Digital by iNspire</div>
         </div>
