--- a/career.html
+++ b/career.html
@@ -16,6 +16,12 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Hotjar Tracking Code for lppfa.inspireleadership.biz -->
+    <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+    <style type="text/css">
+    #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+    /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+       We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+    </style>
     <script>
         (function(h,o,t,j,a,r){
             h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
@@ -26,6 +32,11 @@
             a.appendChild(r);
         })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
     </script>
+    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+    <script type='text/javascript'>
+    (function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);
+    </script>
+<!--End mc_embed_signup-->
 </head>
 <body>
     <!-- Mobile navigation -->
@@ -339,8 +350,29 @@
                             <div class="sub-box text-center">
                                 <p style="margin-top: 1rem; font-weight: 300">Want regular updates on job openings and personal development tips</p>
                                 <p>Sign Up for our news-letter</p>
-                                <form><input class="form-control" type="search" placeholder="E-mail" id="example-search-input"></form>
-                                <a type="button" class="btn btn-outline-loc">Follow</a>
+<!-- Begin MailChimp Signup Form -->
+
+<div id="mc_embed_signup">
+<form action="//leadway-pensure.us10.list-manage.com/subscribe/post?u=a7d286c921166498a0b699255&amp;id=47a1abe4d1" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+<div class="mc-field-group">
+    <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+</label>
+    <input type="email" placeholder="Johnsnow@xxxx.com" name="EMAIL" class="required email chimp text-center" style="width:100%" id="mce-EMAIL">
+</div>
+    <div id="mce-responses" class="clear">
+        <div class="response" id="mce-error-response" style="display:none"></div>
+        <div class="response" id="mce-success-response" style="display:none"></div>
+    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true">
+    <input type="text" name="b_a7d286c921166498a0b699255_47a1abe4d1" tabindex="-1" value="">
+    </div>
+    <div class="clear">
+    <input type="submit" value="Follow" name="subscribe" id="mc-embedded-subscribe" class="btn btn-outline-loc ctips-button">
+    </div>
+    </div>
+</form>
+</div>
                             </div>
                             <div class="pen-calc-bg text-center">
                                 <div class="pen-calc mx-auto">
