--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
         <div class="response" id="mce-success-response" style="display:none"></div>
     </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a7d286c921166498a0b699255_c1b945e29f" tabindex="-1" value=""></div>
-    <div class="clear" align=center><input type="submit" value="Subscribe Today" name="subscribe" id="mc-embedded-subscribe" class="btn btn-outline-red btn-sm" style=""></div>
+    <div class="clear" align=center><input type="submit" value="Subscribe Today" name="subscribe" id="mc-embedded-subscribe" class="btn btn-outline-red btn-sm news-button" style=""></div>
     </div>
 </form>
 </div>
