--- a/index.html
+++ b/index.html
@@ -591,18 +591,18 @@
 <form action="https://leadway-pensure.us10.list-manage.com/subscribe/post" method="POST">
 <input type="hidden" name="u" value="a7d286c921166498a0b699255">
 <input type="hidden" name="id" value="c1b945e29f">
-    <div id="mc_embed_signup_scroll">
+    <div id="mc_embed_signup_scroll" class="text-center">
     <h2>Subscribe to our mailing list</h2>
-<div class="mc-field-group">
+<div class="mc-field-group text-center">
     <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
 </label>
    <input type="email" autocapitalize="off" autocorrect="off" name="MERGE0" id="MERGE0" size="25" value="" class="chimp">
 </div>
-<div class="mc-field-group">
+<div class="mc-field-group text-center">
     <label for="mce-FNAME">First Name </label>
     <input type="text" name="MERGE1" id="MERGE1" size="25" value="" class="chimp">
 </div>
-<div class="mc-field-group">
+<div class="mc-field-group text-center">
     <label for="mce-LNAME">Last Name </label>
     <input type="text" name="MERGE2" id="MERGE2" size="25" value="" class="chimp">
 </div>
@@ -611,7 +611,8 @@
         <div class="response" id="mce-success-response" style="display:none"></div>
     </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a7d286c921166498a0b699255_c1b945e29f" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    <div class="clear text-center"><input type="submit" target="_blank" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="
+     btn btn-outline-red btn-sm"></div>
     </div>
 </form>
 </div>
